# weather_app

./: .env  Cargo.toml
src/: api.rs  cli.rs  error.rs  main.rs  models.rs
