[package]
name = "weather_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3" 
lru = "0.12" 